# profai_afisha_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  afisha_client.py  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: main.py
app/api/: endpoints.py  router.py
app/api/routers/: cities.py  creations.py  places.py  promotions.py
app/core/: afisha_client.py  config.py
app/dependencies/: afisha.py  common.py
app/models/: schemas.py
app/schemas/: cities.py  creations.py  places.py  promotions.py  schemas.py
app/services/: afisha_client.py
app/services/afisha/: __init__.py  base.py  cities.py  creations.py  places.py  promotions.py
app/tests/: test_helpers.py
app/utils/: clean_json.py  get_city.py  helpers.py  json_cities.py  logger.py  preprocess.py
scripts/: clean_json.py  get_city.py  json_cities.py  save_json_cities.py
tests/: test_cities.py
